# TurretSystem

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  turretSystem.cbp
apps/: DenseOpticalFlow.cpp  SOT.cpp  chess.cpp  client.cpp  dense_optical_flow1.cpp  dense_optical_flow2.cpp  dense_optical_flow3.cpp  dense_optical_flow4.cpp  dense_optical_flow_gpu.cpp  fiveDofArmKinematics.cpp  main.cpp  script1.cpp  script2.cpp  script3.cpp  script4.cpp  script5.cpp  script6.cpp  server.cpp  track_object.cpp
arduino/: arm_code  stepper  turret
include/: someClass.h
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: Eye.cpp  Eye.h  InverseForwardKinematicsModel.cpp  InverseForwardKinematicsModel.h  MovementDetector.cpp  MovementDetector.h  PixelToMotorStepsConverter.cpp  Serial_Rs232.cpp  Serial_Rs232.h  StepperMotorController.cpp  StepperMotorController.h  TurretSystem.cpp  TurretSystem.h  calib_intrinsic.cpp  main.cpp  motionDetector.cpp  motionDetector.h  someClass.cpp
